# yunikEngine

./: .gitmodules  CMakeLists.txt  README.md
include/yunikEngine/: README.md  camera.hpp  manager.hpp  mesh.hpp  scene.hpp  shader.hpp  texture.hpp  window.hpp
lib/: CMakeLists.txt  README.md
src/: CMakeLists.txt  README.md  camera.cpp  manager.cpp  mesh.cpp  scene.cpp  shader.cpp  texture.cpp  window.cpp
test/: CMakeLists.txt  README.md  shader.frag  shader.vert  test.cpp
