# OpenGL
FIND_PACKAGE (OpenGL REQUIRED)

# GLEW

# GLFW3
SET (GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
SET (GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
SET (GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
SET (GLFW_INSTALL OFF CACHE BOOL "" FORCE)
ADD_SUBDIRECTORY (glfw)

# GLM
SET (GLM_QUIET ON CACHE BOOL "" FORCE)
SET (BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
SET (GLM_TEST_ENABLE_CXX_17 ON CACHE BOOL "" FORCE)
SET (GLM_TEST_ENABLE OFF CACHE BOOL "" FORCE)
ADD_SUBDIRECTORY (glm)


SET (VUNIKENGINE_EXTERNAL_LIBRARY_PRIVATE_INCLUDES
    ${CMAKE_CURRENT_SOURCE_DIR}/glfw/include
PARENT_SCOPE)

SET (VUNIKENGINE_EXTERNAL_LIBRARY_PUBLIC_INCLUDES
    ${OPENGL_INCLUDE_DIRS}
    ${CMAKE_CURRENT_SOURCE_DIR}/glm
PARENT_SCOPE)

SET (VUNIKENGINE_EXTERNAL_LIBRARY_LINKS
    ${OPENGL_LIBRARIES}
    glfw
    glm
PARENT_SCOPE)
