# OpenGL
FIND_PACKAGE (OpenGL REQUIRED)

# GLEW
SET (glew-cmake_BUILD_SHARED OFF CACHE BOOL "" FORCE)
SET (glew-cmake_BUILD_SINGLE_CONTEXT OFF CACHE BOOL "" FORCE)
ADD_SUBDIRECTORY (glew)

# GLFW3
SET (GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
SET (GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
SET (GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
SET (GLFW_INSTALL OFF CACHE BOOL "" FORCE)
ADD_SUBDIRECTORY (glfw)

# GLM
SET (GLM_QUIET ON CACHE BOOL "" FORCE)
SET (BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
SET (GLM_TEST_ENABLE_CXX_17 ON CACHE BOOL "" FORCE)
SET (GLM_TEST_ENABLE OFF CACHE BOOL "" FORCE)
ADD_SUBDIRECTORY (glm)

# Assimp
SET (BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
SET (ASSIMP_BUILD_ASSIMP_TOOLS OFF CACHE BOOL "" FORCE)
SET (ASSIMP_BUILD_TESTS OFF CACHE BOOL "" FORCE)
SET (INJECT_DEBUG_POSTFIX OFF CACHE BOOL "" FORCE)
ADD_SUBDIRECTORY (assimp)


# Classify the external libraries
SET (YUNIKENGINE_EXTERNAL_LIBRARY_PRIVATE_INCLUDES
    ${OPENGL_INCLUDE_DIRS}
    ${CMAKE_CURRENT_SOURCE_DIR}/glew/include
    ${CMAKE_CURRENT_SOURCE_DIR}/glfw/include
    ${CMAKE_CURRENT_SOURCE_DIR}/assimp/include
    ${CMAKE_CURRENT_SOURCE_DIR}/stb
PARENT_SCOPE)

SET (YUNIKENGINE_EXTERNAL_LIBRARY_PUBLIC_INCLUDES
    ${CMAKE_CURRENT_SOURCE_DIR}/glm
PARENT_SCOPE)

SET (YUNIKENGINE_EXTERNAL_LIBRARY_LINKS
    ${OPENGL_LIBRARIES}
    libglewmx_static
    glfw
    glm
    assimp
PARENT_SCOPE)
