FILE (GLOB_RECURSE YUNIKENGINE_CPP_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

IF (YUNIKENGINE_BUILD_SHARED)
    ADD_LIBRARY (${YUNIKENGINE_BUILD_TARGET_SHARED} SHARED
        ${YUNIKENGINE_CPP_FILES}
    )
    TARGET_INCLUDE_DIRECTORIES (${YUNIKENGINE_BUILD_TARGET_SHARED}
    PUBLIC
        ${YUNIKENGINE_INCLUDE_DIRS}
        ${YUNIKENGINE_EXTERNAL_LIBRARY_PUBLIC_INCLUDES}
    PRIVATE
        ${YUNIKENGINE_EXTERNAL_LIBRARY_PRIVATE_INCLUDES}
    )
    TARGET_LINK_LIBRARIES (${YUNIKENGINE_BUILD_TARGET_SHARED}
        ${YUNIKENGINE_EXTERNAL_LIBRARY_LINKS}
    )
ENDIF ()

IF (YUNIKENGINE_BUILD_STATIC)
    ADD_LIBRARY (${YUNIKENGINE_BUILD_TARGET_STATIC} STATIC
        ${YUNIKENGINE_CPP_FILES}
    )
    TARGET_INCLUDE_DIRECTORIES (${YUNIKENGINE_BUILD_TARGET_STATIC}
    PUBLIC
        ${YUNIKENGINE_INCLUDE_DIRS}
        ${YUNIKENGINE_EXTERNAL_LIBRARY_PUBLIC_INCLUDES}
    PRIVATE
        ${YUNIKENGINE_EXTERNAL_LIBRARY_PRIVATE_INCLUDES}
    )
    TARGET_LINK_LIBRARIES (${YUNIKENGINE_BUILD_TARGET_STATIC}
        ${YUNIKENGINE_EXTERNAL_LIBRARY_LINKS}
    )
ENDIF ()
